<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/calculadora"
        android:icon="@drawable/ic_calculadora"
        android:title="Calculadora"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/bolsaCompras"
        android:icon="@drawable/ic_bolsa_compras"
        android:title="Bolsa de Compras"
        app:actionLayout="@layout/custom_action_item_layout"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/action_perfil"
        android:orderInCategory="100"
        android:title="@string/action_perfil"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_configuracion"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quejas_sugerencias"
        android:orderInCategory="100"
        android:title="@string/action_quejas_sugerencias"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_cerrar_sesion"
        android:orderInCategory="100"
        android:title="@string/action_cerrar_Sesion"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_eliminar_cuenta"
        android:orderInCategory="100"
        android:title="Eliminar Cuenta"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_cerrar_aplicacion"
        android:orderInCategory="100"
        android:title="@string/action_cerrar_aplicacion"
        app:showAsAction="never" />




</menu>