<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_perfil"
        android:orderInCategory="100"
        android:title="@string/action_perfil"/>

    <item
        android:id="@+id/action_configuracion"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_proveedores"
        android:orderInCategory="100"
        android:title="Proveedores"
        app:showAsAction="never" />

    <item

        android:orderInCategory="100"
        android:title="Cliente"
        app:showAsAction="never" >


        <menu>

            <item
                android:id="@+id/action_quejas_sugerencias"
                android:orderInCategory="100"
                android:title="@string/action_quejas_sugerencias"
                app:showAsAction="never" />



            <item
                android:id="@+id/action_pago_suscripcion"
                android:orderInCategory="100"
                android:title="Pagos de Suscripción"
                app:showAsAction="never" />



        </menu>




    </item>



    <item
        android:id="@+id/action_cerrar_sesion"
        android:orderInCategory="100"
        android:title="@string/action_cerrar_Sesion"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_eliminar_cuenta"
        android:orderInCategory="100"
        android:title="Eliminar Cuenta"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_cerrar_aplicacion"
        android:orderInCategory="100"
        android:title="@string/action_cerrar_aplicacion"
        app:showAsAction="never" />




</menu>